--- a/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/Shared/_sidebar.cshtml
@@ -68,10 +68,10 @@
                 <li>
                     <a href="fontawesome.html">
                         <i class="fa fa-users"></i>
-                        <span>Customer </span>
+                        <span>Cusotmer </span>
                     </a>
                     <ul class="sub">
-                        <li><a href="/Admin/CustomerAdmin/Index">List Cusotmer</a></li>
+                        <li><a href="/Admin/CusotmerAdmin/Index">List Cusotmer</a></li>
                     </ul>
                 </li>
                 <li>
@@ -114,8 +114,8 @@
                         <span>Slide</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="/Admin/SlideAdmin/Index">List Slide</a></li>
-                        <li><a href="/Admin/SlideAdmin/Create">Add Slide</a></li>
+                        <li><a href="/Admin/ContactAdmin/Index">List Slide</a></li>
+                        <li><a href="/Admin/ContactAdmin/Create">Add Slide</a></li>
                     </ul>
                 </li>
                 <li>
