--- a/FonSpa/FonSpa/Areas/Admin/Views/MenuAdmin/Index.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/MenuAdmin/Index.cshtml
@@ -7,8 +7,7 @@
     List<Models.Entity.MenuType> listMenuTypes = ViewBag.MenuType;
 }
 @section jsFooter{
-
-    @*<script src="~/Asset/Admin/Controller/ContentController.js"></script>*@
+    <script src="~/Asset/Admin/Controller/MenuController.js"></script>
 }
 
 <section class="wrapper">
