--- a/FonSpa/FonSpa/Views/Home/Index.cshtml
+++ b/FonSpa/FonSpa/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = null;
+    
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -7,9 +8,6 @@
     <title>Home 02</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    
-
     <link rel="icon" type="image/png" href="~/Asset/Client/images/icons/favicon-01.png" />
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/Asset/Client/fonts/font-awesome-4/css/font-awesome.min.css">
@@ -41,238 +39,87 @@
 
 </head>
 <body class="animsition">
-
-    <div class="wrap-page-01">
-
         <!-- Header -->
-        <header class="hun-header style-sticky layout-2">
-            <div class="wrapper-header element-for-stick">
-                <div class="logo-header">
-                    <a href="#" class="main-logo">
-                        <img src="~/Asset/Client/images/icons/logo-02.png" alt="IMG" />
-                    </a>
-
-                    <a href="#" class="mobile-logo">
-                        <img src="~/Asset/Client/images/icons/logo-02.png" alt="IMG" />
-                    </a>
-
-                    <a href="#" class="sticky-logo">
-                        <img src="~/Asset/Client/images/icons/logo-02.png" alt="IMG" />
-                    </a>
-
-                    <a href="#" class="retina-logo">
-                        <img src="~/Asset/Client/images/icons/logo-02.png" alt="IMG" />
-                    </a>
-                </div>
-
-                <nav class="main-navigation">
-                    <ul class="list-menu">
-                        <li>
-                            <a href="home1.html">
-                                Home
-                            </a>
+        <header class="hun-header style-overlay layout-1">
+            <div class="container">
+                <div class="wrapper-header">
+                    <div class="group-feature left-side">
+                        <div class="hun-element-dropdown-menu layout-1">
+                            English
 
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="home1.html">
-                                        Home 01
+                                    <a href="#">
+                                        English
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="home2.html">
-                                        Home 02
+                                    <a href="#">
+                                        Japan
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="home3.html">
-                                        Home 03
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="home4.html">
-                                        Home 04
+                                    <a href="#">
+                                        French
                                     </a>
                                 </li>
                             </ul>
-                        </li>
-
-                        <li>
-                            <a href="#">
-                                Pages
-                            </a>
-
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="about.html">
-                                        About Us
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="what-we-do.html">
-                                        What We Do
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="gallery-01.html">
-                                        Gallery 01
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="gallery-02.html">
-                                        Gallery 02
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="gallery-03.html">
-                                        Gallery 03
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="gallery-single.html">
-                                        Gallery Single
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="comming-soon.html">
-                                        Comming Soon
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="404error.html">
-                                        404 Error
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="services-01.html">
-                                Services
-                            </a>
-
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="services-01.html">
-                                        Services 01
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="services-02.html">
-                                        Services 02
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="service-detail.html">
-                                        Service Detail
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="booking.html">
-                                Booking
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="blog-grid.html">
-                                Blog
-                            </a>
-
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="blog-grid.html">
-                                        Blog Grid
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="blog-no-sidebar.html">
-                                        Blog No Sidebar
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="blog-sidebar-left.html">
-                                        Blog Sidebar Left
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="blog-sidebar-right.html">
-                                        Blog Sidebar Right
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="blog-detail.html">
-                                        Blog Detail
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="blog-detail-full.html">
-                                        Blog Detail Full
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a href="contact.html">
-                                Contact
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-
-                <div class="group-feature">
-                    <div class="buttons-header d-none d-sm-block">
-                        <a href="booking.html" class="hun-button size-small shape-round style-fill-color">
-                            Book now
-                        </a>
-                    </div>
-
-                    <div class="hun-element-search layout-1">
-                        <span class="search-open">
-                            <i class="zmdi zmdi-search"></i>
-                        </span>
-
-                        <div class="search-form">
-                            <span class="search-close"></span>
-
-                            <form>
-                                <input type="text" class="search-field" />
-                                <span class="search-notice"> Hit enter to search or ESC to close</span>
-                            </form>
-
-                            <ul class="list-result"></ul>
                         </div>
                     </div>
 
-                    <div class="hun-menu-mobile">
-                        <a href="#" class="btn-toggle-menu"></a>
+                    <div class="content-header">
+                        <div class="logo-header">
+                            <a href="#" class="main-logo">
+                                <img src="/Asset/Client/images/icons/logo-01.png" alt="IMG">
+                            </a>
 
-                        <nav class="mobile-navigation">
-                            <div class="logo-menu-mobile">
-                                <a href="#">
-                                    <img src="~/Asset/Client/images/icons/logo-02.png" alt="IMG">
-                                </a>
+                            <a href="#" class="mobile-logo">
+                                <img src="/Asset/Client/images/icons/logo-01.png" alt="IMG">
+                            </a>
+
+                            <a href="#" class="sticky-logo">
+                                <img src="/Asset/Client/images/icons/logo-01.png" alt="IMG">
+                            </a>
+
+                            <a href="#" class="retina-logo">
+                                <img src="/Asset/Client/images/icons/logo-01.png" alt="IMG">
+                            </a>
+                        </div>
+
+                        @Html.Partial("_MainMenu")
+                    </div>
+
+                    <div class="group-feature right-side">
+                        <div class="hun-element-search layout-1">
+                            <span class="search-open">
+                                <i class="zmdi zmdi-search"></i>
+                            </span>
+
+                            <div class="search-form">
+                                <span class="search-close"></span>
+
+                                <form>
+                                    <input type="text" class="search-field" />
+                                    <span class="search-notice"> Hit enter to search or ESC to close</span>
+                                </form>
+
+                                <ul class="list-result"></ul>
                             </div>
-                        </nav>
+                        </div>
+
+                        <div class="hun-menu-mobile">
+                            <a href="#" class="btn-toggle-menu"></a>
+
+                            <nav class="mobile-navigation">
+                                <div class="logo-menu-mobile text-center">
+                                    <a href="#">
+                                        <img src="/Asset/Client/images/icons/logo-footer-01.png" alt="IMG">
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -284,7 +131,7 @@
                 <div class="main-slider js-call-slick" data-animate="true">
                     <div class="slide-slick" data-slick='{"fade": true, "speed": 900, "dots": true, "arrows": false, "autoplay": true, "autoplaySpeed": 5000, "infinite": true, "slidesToShow": 1, "slidesToScroll": 1}'>
 
-                        <div class="item-slick full-height-with-header" style="background-image: url('~/Asset/Client/images/slide-01.jpg');">
+                        <div class="item-slick full-height-with-header" style="background-image: url('/Asset/Client/images/slide-01.jpg');">
                             <div class="content-slide">
                                 <div class="subtitle-slide" data-appear="slideInDown" data-delay="800">
                                     wellcome Girl spring
@@ -302,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="item-slick full-height-with-header" style="background-image: url('~/Asset/Client/images/slide-03.jpg');">
+                        <div class="item-slick full-height-with-header" style="background-image: url('/Asset/Client/images/slide-03.jpg');">
                             <div class="content-slide">
                                 <div class="subtitle-slide" data-appear="fadeInDown" data-delay="800">
                                     Treatment of Body
@@ -320,7 +167,7 @@
                             </div>
                         </div>
 
-                        <div class="item-slick full-height-with-header" style="background-image: url('~/Asset/Client/images/slide-04.jpg');">
+                        <div class="item-slick full-height-with-header" style="background-image: url('/Asset/Client/images/slide-04.jpg');">
                             <div class="content-slide">
                                 <div class="subtitle-slide" data-appear="fadeInRight" data-delay="800">
                                     Breakthrough power
@@ -338,7 +185,7 @@
                             </div>
                         </div>
 
-                        <div class="item-slick full-height-with-header" style="background-image: url('~/Asset/Client/images/slide-02.jpg');">
+                        <div class="item-slick full-height-with-header" style="background-image: url('/Asset/Client/images/slide-02.jpg');">
                             <div class="content-slide">
                                 <div class="subtitle-slide" data-appear="rotateInDownRight" data-delay="800">
                                     Spa & Beauty
