--- a/FonSpa/FonSpa/Views/Shared/_Layout.cshtml
+++ b/FonSpa/FonSpa/Views/Shared/_Layout.cshtml
@@ -5,33 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="assets/images/icons/favicon-01.png" />
+    <link rel="icon" type="image/png" href="/Asset/Client/images/icons/favicon-01.png" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome-4/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/fonts/font-awesome-4/css/font-awesome.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/iconic-font/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/fonts/iconic-font/css/material-design-iconic-font.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/fonts/simple-line-icons/css/simple-line-icons.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/linearicons/icon-font.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/fonts/linearicons/icon-font.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/bootstrap/bootstrap.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/slick/slick.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/magnific-popup/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/magnific-popup/magnific-popup.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/select2/select2.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/animate/animate.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/animsition/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/animsition/animsition.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/daterangepicker/daterangepicker.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/libs/parallax100/parallax100.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/libs/parallax100/parallax100.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/Asset/Client/css/style.css">
     <!--===============================================================================================-->
 
 </head>
@@ -42,195 +42,23 @@
         <div class="wrapper-header element-for-stick">
             <div class="logo-header">
                 <a href="#" class="main-logo">
-                    <img src="assets/images/icons/logo-02.png" alt="IMG">
+                    <img src="/Asset/Client/images/icons/logo-02.png" alt="IMG">
                 </a>
 
                 <a href="#" class="mobile-logo">
-                    <img src="assets/images/icons/logo-02.png" alt="IMG">
+                    <img src="/Asset/Client/images/icons/logo-02.png" alt="IMG">
                 </a>
 
                 <a href="#" class="sticky-logo">
-                    <img src="assets/images/icons/logo-02.png" alt="IMG">
+                    <img src="/Asset/Client/images/icons/logo-02.png" alt="IMG">
                 </a>
 
                 <a href="#" class="retina-logo">
-                    <img src="assets/images/icons/logo-02.png" alt="IMG">
+                    <img src="/Asset/Client/images/icons/logo-02.png" alt="IMG">
                 </a>
             </div>
 
-            <nav class="main-navigation">
-                <ul class="list-menu">
-                    <li>
-                        <a href="home1.html">
-                            Home
-                        </a>
-
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="home1.html">
-                                    Home 01
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="home2.html">
-                                    Home 02
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="home3.html">
-                                    Home 03
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="home4.html">
-                                    Home 04
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="#">
-                            Pages
-                        </a>
-
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="about.html">
-                                    About Us
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="what-we-do.html">
-                                    What We Do
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="gallery-01.html">
-                                    Gallery 01
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="gallery-02.html">
-                                    Gallery 02
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="gallery-03.html">
-                                    Gallery 03
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="gallery-single.html">
-                                    Gallery Single
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="comming-soon.html">
-                                    Comming Soon
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="404error.html">
-                                    404 Error
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="services-01.html">
-                            Services
-                        </a>
-
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="services-01.html">
-                                    Services 01
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="services-02.html">
-                                    Services 02
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="service-detail.html">
-                                    Service Detail
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="booking.html">
-                            Booking
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="blog-grid.html">
-                            Blog
-                        </a>
-
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="blog-grid.html">
-                                    Blog Grid
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="blog-no-sidebar.html">
-                                    Blog No Sidebar
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="blog-sidebar-left.html">
-                                    Blog Sidebar Left
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="blog-sidebar-right.html">
-                                    Blog Sidebar Right
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="blog-detail.html">
-                                    Blog Detail
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="blog-detail-full.html">
-                                    Blog Detail Full
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li class="current-menu-item">
-                        <a href="contact.html">
-                            Contact
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            @Html.Partial("_MainMenu")
 
             <div class="group-feature">
                 <div class="buttons-header d-none d-sm-block">
@@ -262,7 +90,7 @@
                     <nav class="mobile-navigation">
                         <div class="logo-menu-mobile">
                             <a href="#">
-                                <img src="assets/images/icons/logo-02.png" alt="IMG">
+                                <img src="/Asset/Client/images/icons/logo-02.png" alt="IMG">
                             </a>
                         </div>
                     </nav>
@@ -271,99 +99,14 @@
         </div>
     </header>
     <!-- end Header -->
-    <!-- Title Page -->
-    <div class="title-page" style="background-image: url(assets/images/title-page-01.png);">
-        <div class="container">
-            <h1 class="main-title">
-                Contact
-            </h1>
-
-            <ul class="breadcrumbs">
-                <li>
-                    <a href="home1.html">
-                        Home
-                    </a>
-                </li>
-
-                <li>
-                    Contact
-                </li>
-            </ul>
-        </div>
-    </div>
-    <!-- end Title Page -->
-    <!-- content contact-page -->
-    <div class="sec--content--contact-page">
-        <div class="container">
-            <div class="hun-element-map layout-1" id="google_map" data-map-x="40.923802" data-map-y="-74.158394" data-scrollwhell="0" data-draggable="1" data-zoom="11" data-pin="assets/images/icons/pin-map.png"></div>
-
-            <div class="row">
-                <div class="col-md-4 mb-5 mb-md-0">
-                    <div class="hun-element-info-contact layout-1">
-                        <h3 class="title-element">
-                            Contact Details
-                        </h3>
-
-                        <ul class="list-info">
-                            <li>
-                                <span>
-                                    Address:
-                                </span>
-
-                                No 40 Baria Sreet 133/2 NewYork 13589
-                            </li>
-
-                            <li>
-                                <span>
-                                    Phone:
-                                </span>
-
-                                <a href="#">+(156)1800-366-666</a>
-                            </li>
-
-                            <li>
-                                <span>
-                                    E-mail:
-                                </span>
-
-                                <a href="#">labore.beauty@gmail.com</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-8">
-                    <form class="contact-form-01">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <input class="input-field" type="text" placeholder="Name *">
-                            </div>
-
-                            <div class="col-sm-6">
-                                <input class="input-field" type="text" placeholder="E-mail *">
-                            </div>
-
-                            <div class="col-12">
-                                <textarea class="input-field" placeholder="Your Comments *"></textarea>
-
-                                <button class="hun-button size-normal shape-round style-fill-color">
-                                    Send message
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end content contact-page -->
+    @RenderBody();
     <!-- Footer -->
-    <footer class="hun-footer layout-1 parallax100" style="background-image: url('assets/images/bg-02.jpg');">
+    <footer class="hun-footer layout-1 parallax100" style="background-image: url('/Asset/Client/images/bg-02.jpg');">
         <div class="container">
             <div class="content-footer text-center">
                 <div class="logo-footer">
                     <a href="#">
-                        <img src="assets/images/icons/logo-footer-01.png" alt="IMG">
+                        <img src="/Asset/Client/images/icons/logo-footer-01.png" alt="IMG">
                     </a>
                 </div>
 
@@ -447,28 +190,28 @@
     </footer>
     <!-- end Footer -->
     <!--===============================================================================================-->
-    <script src="assets/libs/jquery/jquery-1.11.0.min.js"></script>
+    <script src="/Asset/Client/libs/jquery/jquery-1.11.0.min.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/bootstrap/popper.js"></script>
-    <script src="assets/libs/bootstrap/bootstrap.min.js"></script>
+    <script src="/Asset/Client/libs/bootstrap/popper.js"></script>
+    <script src="/Asset/Client/libs/bootstrap/bootstrap.min.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/slick/slick.js"></script>
+    <script src="/Asset/Client/libs/slick/slick.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="/Asset/Client/libs/magnific-popup/jquery.magnific-popup.min.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/select2/select2.min.js"></script>
+    <script src="/Asset/Client/libs/select2/select2.min.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/animsition/animsition.min.js"></script>
+    <script src="/Asset/Client/libs/animsition/animsition.min.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/daterangepicker/moment.min.js"></script>
-    <script src="assets/libs/daterangepicker/daterangepicker.js"></script>
+    <script src="/Asset/Client/libs/daterangepicker/moment.min.js"></script>
+    <script src="/Asset/Client/libs/daterangepicker/daterangepicker.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/libs/parallax100/parallax100.js"></script>
+    <script src="/Asset/Client/libs/parallax100/parallax100.js"></script>
     <!--===============================================================================================-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1p5vx8It09exw_QcBV9A2qJfADpopwDo"></script>
-    <script src="assets/js/map-custom.js"></script>
+    <script src="/Asset/Client/js/map-custom.js"></script>
     <!--===============================================================================================-->
-    <script src="assets/js/main.js"></script>
+    <script src="/Asset/Client/js/main.js"></script>
 
 
 </body>
