--- a/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Create.cshtml
+++ b/FonSpa/FonSpa/Areas/Admin/Views/ContentAdmin/Create.cshtml
@@ -73,7 +73,7 @@
                                             </select>
                                         }
                                     </div>
-                                </div>                            
+                                </div>
                                 <div class="form-group ">
                                     <label class="control-label col-lg-3">TopHot</label>
                                     <div class="col-lg-6">
@@ -100,6 +100,12 @@
                                     <div class="col-lg-6">
                                         @Html.TextAreaFor(model => model.detail, new { htmlAttributes = new { @class = "form-control" }, id = "txtcontent" })
                                         @Html.ValidationMessageFor(model => model.detail, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3">Status</label>
+                                    <div class="col-lg-6">
+                                        @Html.DropDownListFor(model => model.status, new[] { new SelectListItem { Text = "Active", Value = "true" }, new SelectListItem { Text = "Disable", Value = "false" } }, new { @class = "form-control m-bot15" })
                                     </div>
                                 </div>
 
